hphp/test/zend/bad/Zend/tests/finally_goto_003.php
<?php
function foo() {
	try {
    } finally {
	goto test;
test:
    }
}
echo "okey";
?>
